--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Store</title>
+    <meta name="keywords" content="POST GENERAL" />
+    <link
+      rel="stylesheet"
+      href="https://postgeneral01.itembox.design/system/fs_style.css?t=20211125163129"
+    />
+    <link
+      rel="stylesheet"
+      href="https://postgeneral01.itembox.design/generate/theme1/fs_theme.css?t=20211125163129"
+    />
+    <link
+      rel="stylesheet"
+      href="https://postgeneral01.itembox.design/generate/theme1/fs_original.css?t=20211125163129"
+    />
+    <title>POST GENERAL</title>
   </head>
   <body>
     <div id="root"></div>
